--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -47,7 +47,7 @@
     &.buttons-group--selected {
       background-image: linear-gradient(to right, #33a7d8, #62d3ee); // todo
       background-size: 103% auto; // todo
-      box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.06); // todo
+      box-shadow: 0 2px 13px 0 rgba(0, 0, 0, 0.04); // todo
       color: #ffffff; // todo
 
       [cf-button] {
@@ -66,40 +66,28 @@
     display: grid;
     grid-row-gap: 24px;
     margin: 0 -24px;
-    padding: 8px 8px 24px 24px;
+    padding: 0 8px 24px 24px;
+  }
+
+  .schedule__header {
+    display: flex;
+    position: sticky;
+    top: 0;
+    padding: 8px 0;
+    z-index: 1;
+  }
+
+  .schedule__date {
+    display: block;
+    padding: 0 4px;
+    margin: 0 auto;
+    border-radius: 16px;
+    background-color: $bgr-color;
+    color: $fg-color-secondary;
   }
 
   .schedule__section {
     display: grid;
-  }
-
-  .schedule__header {
-    @include sticky;
-    height: 44px;
-    margin: 0 -8px 0 -24px;
-    top: -4px;
-    z-index: 1;
-    -webkit-backface-visibility: hidden;
-
-    &::before,
-    &::after {
-      content: "";
-      display: block;
-      height: 4px;
-      @include sticky;
-    }
-
-    &::before {
-      top: 36px;
-      box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .16),
-                  0 0 1px 0 rgba(0, 0, 0, .16);
-    }
-
-    &::after {
-      background-image: linear-gradient(#f2f3fa, rgba(242, 243, 250, .3));
-      top: 0;
-      z-index: 2;
-    }
   }
 
   .schedule__events + .schedule__events {
@@ -144,10 +132,6 @@
 
   .events__time {
     padding-top: 16px;
-  }
-
-  .events__list {
-
   }
 
   // event ---
