--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -82,7 +82,7 @@
     padding: 0 4px;
     margin: 0 auto;
     border-radius: 16px;
-    background-color: $bgr-color;
+    background-color: $bg-color;
     color: $fg-color-secondary;
   }
 
@@ -100,7 +100,7 @@
     background-color: #f2f3fa;
     height: 40px;
     padding: 0 24px;
-    @include sticky;;
+    @include sticky;
     top: 0;
     margin-top: -4px;
     z-index: 3;
@@ -169,7 +169,7 @@
   }
 
   .time__container {
-    @include sticky;;
+    @include sticky;
     top: 0;
   }
 
