--- a/lib/src/components/ui/talk_post/talk_post_component.html
+++ b/lib/src/components/ui/talk_post/talk_post_component.html
@@ -1,27 +1,62 @@
-<div class="message">
-    <img [src]="post.avatar" />
-    <div class="message_container">
-        <div class="message_top">
-            <div class="message_top-author"> {{ post.authorName }} </div>
-            <div class="message_top-date"> {{ getTime()}} </div>
-        </div>
-        <div class="message_text">
-            <div class="message_reply" *ngIf="replyBlockShown">
-                <div class="message_reply-author"> {{ post.replyName }} </div>
-                <div class="message_reply-text"> {{ post.replyText }} </div>
-            </div>
-            {{ post.text }}
-        </div>
-        <div class="message_actions">
-            <div
-                    class="action_btn"
-                    (click)="onPostReply()"
-                    *ngIf="canReply">Ответить</div>
+<img
+  [src]="post.avatar"
+  width="40"
+  height="40"
+  class="message__avatar">
 
-            <div
-                    class="action_btn"
-                    (click)="onPostDelete()"
-                    *ngIf="canDelete">Удалить</div>
-        </div>
+<div
+  class="message-balloon">
+
+  <header
+    class="message-balloon__header">
+
+    <div
+      class="message-balloon__author">
+      {{ post.authorName }}
     </div>
+
+    <div
+      class="message-balloon__date">
+      {{ getTime() }}
+    </div>
+  </header>
+
+  <div
+    class="message-balloon__text">
+
+    <div
+      *ngIf="replyBlockShown"
+      class="message_reply">
+
+      <div
+        class="message_reply-author">
+        {{ post.replyName }}
+      </div>
+
+      <div
+        class="message_reply-text">
+        {{ post.replyText }}
+      </div>
+    </div>
+
+    {{ post.text }}
+  </div>
+
+  <div
+    class="message-balloon__actions">
+
+    <button
+      *ngIf="canReply"
+      (click)="onPostReply()"
+      class="message-balloon__actions-button">
+      Ответить
+    </button>
+
+    <button
+      *ngIf="canDelete"
+      (click)="onPostDelete()"
+      class="message-balloon__actions-button">
+      Удалить
+    </button>
+  </div>
 </div>
