--- a/lib/src/components/ui/talk_post_input/talk_post_input_component.html
+++ b/lib/src/components/ui/talk_post_input/talk_post_input_component.html
@@ -1,4 +1,24 @@
-<div>
-    <input #input [(ngModel)]="newPostText" type="text">
-    <button (click)="send()" [disabled]="!isAllowToSend">Отправить</button>
+<div
+  class="message-send__container">
+
+  <input
+    #input
+    [(ngModel)]="newPostText"
+    placeholder="Напишите что-нибудь..."
+    class="message-send__input">
+
+  <button
+    cf-button
+    (click)="send()"
+    [disabled]="!isAllowToSend"
+    class="message-send__button button-icon-only"
+    tabindex="0">
+
+    <svg
+      aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24" viewBox="0 0 24 24"
+      class="button-icon">
+      <path d="M18.85 9.86L7.5 4.26a2.45 2.45 0 0 0-2.76.41 2.38 2.38 0 0 0-.54 2.7l1.94 4.3c.1.21.1.45 0 .66l-1.94 4.3a2.38 2.38 0 0 0 .18 2.28A2.44 2.44 0 0 0 6.43 20a2.57 2.57 0 0 0 1.1-.26l11.33-5.6A2.4 2.4 0 0 0 20.19 12c0-.9-.52-1.74-1.34-2.14zm-.72 2.85l-11.34 5.6a.82.82 0 0 1-.9-.14.8.8 0 0 1-.19-.9l1.94-4.3.06-.17h5.58a.8.8 0 0 0 .8-.8.8.8 0 0 0-.8-.8H7.7a1.59 1.59 0 0 0-.07-.18L5.7 6.72a.8.8 0 0 1 .18-.89.82.82 0 0 1 .91-.14l11.34 5.6a.8.8 0 0 1 0 1.42z" fill-rule="evenodd"/>
+    </svg>
+  </button>
 </div>
