--- a/lib/src/components/ui/talk_post_input/talk_post_input_component.scss
+++ b/lib/src/components/ui/talk_post_input/talk_post_input_component.scss
@@ -1,74 +1,32 @@
 @import "../../../../../web/assets/styles/variables.scss";
 
-.message {
-  display: flex;
-  margin: 10px 0 0 10px;
-  min-height: 30px;
-  height: auto;
-  text-align: left;
+:host {
+  display: block;
 
-  .message_top {
-    display: flex;
-    justify-content: space-between;
-    & .message_top-author {
-      font-weight: 600;
-    }
-    & .message_top-date {
-      color: $font-color-secondary;
-    }
+  .message-send__container {
+    position: relative;
   }
 
-  img {
+  .message-send__input {
     display: block;
-    order: 1;
-    margin: 0 10px 0 0;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    box-sizing: border-box;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-  }
-
-  .message_container {
-    display: block;
-    flex: 1;
-    order: 2;
-
+    border: none;
+    resize: none;
+    font-size: 12px;
+    line-height: 20px;
+    height: 48px;
     margin: 0;
-    width: auto;
-    padding: 8px 10px 8px 10px;
-    background: #fff;
-    word-wrap: break-word;
-    border-radius: 0 3px 3px 3px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-
-    & .message_text {
-
-    }
-
-    &:before {
-      position: relative;
-      float: left;
-      content: '';
-      margin: -8px 0 0 -16px;
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 0 8px 8px 0;
-      border-color: transparent #fff transparent transparent;
-    }
+    padding: 0 48px 0 24px;
+    color: #444;
+    background: #ffffff;
+    width: 100%;
+    position: relative;
+    box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.06);
   }
-  & .message_actions {
-    display: flex;
+
+  .message-send__button {
+    position: absolute;
+    top: 50%;
+    right: 8px;
+    transform: translateY(-50%);
   }
-}
-
-.action_btn {
-  color: #33a7d8;
-  margin: 5px 5px 0 5px;
-}
-
-.action_btn:hover {
-  cursor: pointer;
 }
