--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -219,6 +219,7 @@
       width: 16px;
       height: 2px;
       position: absolute;
+      border-radius: 2px;
       top: 8px;
       left: -22px;
     }
