--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -1,6 +1,126 @@
 <loader
   [isReady]="isReady">
 
+  <div
+    style="height: 0px; overflow: hidden; visibility: hidden;">
+
+    <svg xmlns="http://www.w3.org/2000/svg">
+
+      <symbol id="figure-0" viewBox="0 0 113 102">
+        <g fill="none" fill-rule="evenodd" opacity=".45">
+          <ellipse cx="24.5" cy="78" fill="#FF5EDD" rx="24.5" ry="24"></ellipse>
+          <circle cx="64.5" cy="48.5" fill="#5E99FF" r="48.5"></circle>
+        </g>
+      </symbol>
+
+      <symbol id="figure-1" viewBox="0 0 144 95">
+        <g fill="none" fill-rule="evenodd" opacity=".45">
+          <path d="M46.243 94.954L42 90.71 112.711 20l4.243 4.242z" fill="#FFEF5E"></path>
+          <path d="M79.477 32.576L92.627 92.4 0 22.265 144 0z" fill="#5E99FF"></path>
+        </g>
+      </symbol>
+
+      <symbol id="figure-2" viewBox="0 0 122 171">
+        <g fill="none" fill-rule="evenodd" transform="translate(-18.212 -.106)">
+          <rect fill="#5EFFAE" height="96" opacity=".7" rx="48" transform="rotate(15 67 122.894)" width="96" x="19" y="74.894"></rect>
+          <path d="M139.616 72.013l-38.777 53.493L39.07.106z" fill="#CB7EF9" opacity=".45"></path>
+        </g>
+      </symbol>
+
+      <symbol id="figure-3" viewBox="0 0 142 168">
+        <g fill="none" fill-rule="evenodd" opacity=".45">
+          <path d="M31.746 28.265l68.418 47.45-100 22.55z" fill="#CB7EF9"></path>
+          <path d="M126.83.332l14.826 81.93L55 27.498z" fill="#FF5EDD"></path>
+          <path d="M121.83 85.332l14.826 81.93L50 112.498z" fill="#5E99FF"></path>
+        </g>
+      </symbol>
+
+      <symbol id="figure-4" viewBox="0 0 150 118">
+        <g fill="none" fill-rule="evenodd">
+          <path d="M56.593.235l92.729 24.847-24.847 92.729-92.728-24.847z" fill="#FCDE98"></path>
+          <path d="M100.164 41.265v47.45l-100 22.55z" fill="#FF625E" opacity=".7"></path>
+        </g>
+      </symbol>
+
+      <symbol id="figure-5" viewBox="0 0 115 115">
+        <g fill="none" fill-rule="evenodd">
+          <path d="M0 90l24.25-14 14 24.25-24.249 14z" fill="#FFEF5E" opacity=".45"></path>
+          <path d="M15.77 38.9l40.568 10.87-10.87 40.568-40.57-10.87z" fill="#FF625E" opacity=".7"></path>
+          <path d="M69.254 0l45.255 45.254L69.254 90.51 24 45.254z" fill="#5EFFAE" opacity=".7"></path>
+        </g>
+      </symbol>
+
+      <symbol id="figure-6" viewBox="0 0 146 106">
+        <g fill="none" fill-rule="evenodd">
+          <path d="M31 59.196L34 54l38.971 22.5-3 5.196z" fill="#98FCC1" opacity=".7"></path>
+          <path d="M7.778 62.598L0 54.82 31.82 23l7.778 7.778z" fill="#FF5EDD" opacity=".45"></path>
+          <path d="M59 51.732L58 50l86.603-50 1 1.732z" fill="#7BEAEB" opacity=".45"></path>
+          <path d="M3.8 105.082l-.776-2.898L48.423 90.02l.776 2.898z" fill="#5E99FF" opacity=".45"></path>
+        </g>
+      </symbol>
+
+      <symbol id="figure-7" viewBox="0 0 115 115">
+        <g fill="none" fill-rule="evenodd">
+          <path d="M0 90l24.25-14 14 24.25-24.249 14z" fill="#A698FC" opacity=".7"></path>
+          <path d="M15.77 38.9l40.568 10.87-10.87 40.568-40.57-10.87z" fill="#98FCC1" opacity=".7"></path>
+          <path d="M69.254 0l45.255 45.254L69.254 90.51 24 45.254z" fill="#5E99FF" opacity=".45"></path>
+        </g>
+      </symbol>
+
+      <symbol id="figure-8" viewBox="0 0 134 162">
+        <g fill="none" fill-rule="evenodd" transform="translate(-.144)">
+          <ellipse cx="72.644" cy="107" fill="#FF5EDD" opacity=".45" rx="54.5" ry="55"></ellipse>
+          <ellipse cx="92.644" cy="42" fill="#CB7EF9" opacity=".45" rx="41.5" ry="42"></ellipse>
+          <path d="M.143 73l27.713-16 16 27.712-27.713 16z" fill="#98FCC1" opacity=".7"></path>
+        </g>
+      </symbol>
+
+      <symbol id="figure-9" viewBox="0 0 97 80">
+        <g fill="none" fill-rule="evenodd">
+          <circle cx="63.5" cy="33.5" fill="#FF625E" opacity=".7" r="33.5"></circle>
+          <path d="M0 22h58v58H0z" fill="#FFEF5E" opacity=".45"></path>
+        </g>
+      </symbol>
+
+      <symbol id="figure-10" viewBox="0 0 127 161">
+        <g fill="none" fill-rule="evenodd">
+          <path d="M82.21 40l44.323 76.77-76.21 44L5.999 84z" fill="#CB7EF9" opacity=".45"></path>
+          <path d="M43.093.105L95.42 52.43 52.993 94.857.667 42.53z" fill="#FEB0A5" opacity=".8"></path>
+        </g>
+      </symbol>
+
+      <symbol id="figure-11" viewBox="0 0 126 158">
+        <g fill="none" fill-rule="evenodd" transform="translate(-.402 -.52)">
+          <path d="M81.612 37.52l44.323 76.77-76.21 44L5.4 81.52z" fill="#FFEF5E" opacity=".45"></path>
+          <path d="M30.402.52l5.196 3-30 51.96-5.196-3z" fill="#FEB0A5"></path>
+          <ellipse cx="39.902" cy="43.519" fill="#A698FC" opacity=".7" rx="12.5" ry="12"></ellipse>
+        </g>
+      </symbol>
+
+      <symbol id="figure-12" viewBox="0 0 106 102">
+        <g fill="none" fill-rule="evenodd" opacity=".7">
+          <circle cx="17.5" cy="84.5" fill="#A698FC" r="17.5"></circle>
+          <circle cx="57.5" cy="48.5" fill="#5EFFAE" r="48.5"></circle>
+          <circle cx="79.5" cy="35.5" fill="#FFF" r="17.5" transform="matrix(1 0 0 -1 0 71)"></circle>
+        </g>
+      </symbol>
+
+      <symbol id="figure-13" viewBox="0 0 142 160">
+        <g fill="none" fill-rule="evenodd" transform="translate(-.836)">
+          <path d="M84.164 106.5l-30.5 52.827-52.828-30.5L31.336 76z" fill="#FF625E" opacity=".7"></path>
+          <circle cx="98.836" cy="44" fill="#CB7EF9" opacity=".45" r="44"></circle>
+        </g>
+      </symbol>
+
+      <symbol id="figure-14" viewBox="0 0 181 204">
+        <g fill="none" fill-rule="evenodd">
+          <path d="M48.43 72.43l83.14 48-48 83.14-83.14-48z" fill="#FCDE98"></path>
+          <circle cx="119.5" cy="61.5" fill="#98FCC1" opacity=".7" r="61.5"></circle>
+        </g>
+      </symbol>
+    </svg>
+  </div>
+
   <layout
     [title]="'Расписание'"
     [isScroll]="true"
@@ -20,15 +140,15 @@
     <!-- tags -->
     <nav
       pre-content
-      *ngIf="showTags"
+      *ngIf="isFiltersVisible"
       class="tags">
 
-      <!-- Buttons group -->
+      <!-- buttons group -->
       <div
         [class.buttons-group--selected]="isAllSelected"
         class="tags__item buttons-group">
 
-        <!-- Filters -->
+        <!-- filters -->
         <button
           cf-button
           (click)="onFilter()"
@@ -41,15 +161,24 @@
             <path d="M5 6h14a1 1 0 0 1 0 2H5a1 1 0 1 1 0-2zm3 5h8a1 1 0 0 1 0 2H8a1 1 0 0 1 0-2zm3 5h2a1 1 0 0 1 0 2h-2a1 1 0 0 1 0-2z" fill-rule="evenodd"/>
           </svg>
 
-          <span class="visually-hidden">Настроить фильтры</span>
+          <span
+            class="visually-hidden">
+            Настроить фильтры
+          </span>
         </button>
 
-        <!-- All -->
+        <!-- all -->
         <button
           cf-button
           (click)="onShowAllClick()"
           class="button-tag">
-          <span class="visually-hidden">Выбранное: </span> {{ filterTitle }}
+
+          <span
+            class="visually-hidden">
+            Выбранное:
+          </span>
+
+          &ngsp;{{ filterTitle }}
         </button>
       </div>
 
@@ -83,11 +212,11 @@
       content>
 
       <favorite-empty-state
-        *ngIf="lectures.isEmpty && isFavoriteSelected">
+        *ngIf="lectures.isEmpty && isFavoriteSelected && !isSearchEmptyStateVisible">
       </favorite-empty-state>
 
       <now-empty-state
-        *ngIf="lectures.isEmpty && isNowSelected">
+        *ngIf="isNowEmptyStateVisible">
       </now-empty-state>
 
       <search-empty-state
@@ -108,7 +237,7 @@
             class="schedule__header">
 
             <time
-              class="schedule__header-date">
+              class="schedule__date">
               {{ getDay(groupedByDay) }}
             </time>
           </header>
@@ -130,17 +259,17 @@
 
                 <div
                   [attr.id]="currentTimeId(lecture)"
+                  [class.time--right-now]="isRightNow(lecture)"
+                  [class.time--finished]="isFinished(lecture)"
                   class="events__time time">
 
-                  <!-- Time -->
+                  <!-- time -->
                   <div
                     class="time__container">
 
                     <!-- start -->
                     <time
-                      class="time__item time__item--start"
-                      [class.right_now]="isRightNow(lecture)"
-                      [class.finished]="isFinished(lecture)">
+                      class="time__item time__item-start">
                       {{ startTime(lecture) }}
                     </time>
 
@@ -172,6 +301,15 @@
                     (click)="onLectureSelect(lecture)"
                     class="event__info event-card">
 
+                    <!-- event figure image -->
+                    <!--<svg-->
+                      <!--class="event-card__figure">-->
+
+                      <!--<use-->
+                        <!--xlink:href="#figure-0">-->
+                      <!--</use>-->
+                    <!--</svg>-->
+
                     <!-- meta -->
                     <div
                       class="event-card__meta">
@@ -179,8 +317,8 @@
                       <!-- location -->
                       <span
                         class="event-card__meta-item">
-                      {{ lecture.location.title }}
-                    </span>
+                        {{ lecture.location.title }}
+                      </span>
 
                       &ngsp;•&ngsp;
 
@@ -188,8 +326,8 @@
                       <span
                         class="event-card__meta-item"
                         [style.color]="lecture.section.color">
-                      {{ lecture.section.title }}
-                    </span>
+                        {{ lecture.section.title }}
+                      </span>
 
                       <!--{{ flag(lecture) }}-->
                     </div>
@@ -202,28 +340,29 @@
 
                     <!-- speakers (todo: info item) -->
                     <div
+                      *ngIf="lecture.speakers.length != 0"
                       class="event-card__speakers info-item">
 
-                      <!-- Media -->
+                      <!-- media -->
                       <div
                         class="info-item__media">
 
-                      <span
-                        *ngFor="let speaker of lecture.speakers"
-                        class="info-item__media-container">
+                        <span
+                          *ngFor="let speaker of lecture.speakers"
+                          class="info-item__media-container">
 
-                        <img
-                          [src]="speaker.avatarPath"
-                          [alt]="speaker.name"
-                          class="info-item__media-image">
-                      </span>
+                          <img
+                            [src]="speaker.avatarPath"
+                            [alt]="speaker.name"
+                            class="info-item__media-image">
+                        </span>
                       </div>
 
-                      <!-- Details -->
+                      <!-- details -->
                       <div
                         class="info-item__details">
 
-                        <!-- Title -->
+                        <!-- title -->
                         <div
                           class="info-item__title">
 
@@ -246,15 +385,15 @@
                     </div>
 
                     <div
-                    class="event-card__actions">
+                      class="event-card__actions">
 
-                    <actions
-                      [popularity]="lecture.likesCount"
-                      [isFavorite]="isFavoriteLecture(lecture)"
-                      (onFavoriteChange)="onFavoriteChange(lecture, $event)">
-                    </actions>
-                  </div>
-                </article>
+                      <actions
+                        [popularity]="lecture.likesCount"
+                        [isFavorite]="isFavoriteLecture(lecture)"
+                        (onFavoriteChange)="onFavoriteChange(lecture, $event)">
+                      </actions>
+                    </div>
+                  </article>
                 </div>
               </template>
             </div>
