--- a/lib/src/components/layout/layout.html
+++ b/lib/src/components/layout/layout.html
@@ -37,13 +37,11 @@
 
         <!-- nav__item--active for active state -->
         <li
-          (click)="onMenuItemClick(item)"
-          *ngFor="let item of RoutePaths.menu"
-          [class.nav__item--active]="isActive(item)"
-          class="nav__item">
-
+          *ngFor="let item of RoutePaths.menu">
           <a
-            class="nav__link">
+            [routerLink]="item.toUrl()"
+            [class.nav__item--active]="isActive(item)"
+            class="nav__item">
             {{ item.title }}
           </a>
         </li>
@@ -91,9 +89,9 @@
       class="drawer__footer-icon">
       <path d="M15.4 7H20l-7.08 7.06-2.3-2.29L15.41 7zm-6.8 4.04l3.67 3.67L9.97 17 4 11.04h4.6z" fill-rule="evenodd"/>
     </svg>
-    
+
     Сделано&nbsp;
-    
+
     <a href="https://spb.hh.ru/employer/815269" target="_blank" >командой Wrike</a>
   </footer>
 </material-drawer>
@@ -164,7 +162,6 @@
       <ng-content
         select="[actions]"
       ></ng-content>
-
     </header>
 
     <ng-content
