--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -71,14 +71,13 @@
 
   .schedule__section {
     display: grid;
-    grid-row-gap: 24px;
     margin: 0 -24px;
-    padding: 0 8px 24px 24px;
+    padding: 0 8px 0 24px;
   }
 
   .schedule__header {
     display: flex;
-    position: sticky;
+    @include sticky;
     top: 0;
     padding: 8px 0;
     z-index: 1;
