Fix event description and position sticky

--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -71,7 +71,7 @@
 
   .schedule__header {
     display: flex;
-    position: sticky;
+    @include sticky;
     top: 0;
     padding: 8px 0;
     z-index: 1;
