Replace image in about container

--- a/lib/src/components/containers/about_container/about_container.html
+++ b/lib/src/components/containers/about_container/about_container.html
@@ -41,7 +41,7 @@
 
 		<div
       class="about__options-item-text">
-      запили фичу, которой тебе не&nbsp;хватает
+      Запили фичу, которой тебе не&nbsp;хватает
     </div>
 	</li>
 	<li
@@ -60,7 +60,7 @@
 		<div
       class="about__options-item-text">
 
-      пофикси багу, которая тебя раздражает
+      Пофикси багу, которая тебя раздражает
 
     </div>
 	</li>
@@ -68,19 +68,17 @@
     class="about__options-item">
 
 		<svg
-      aria-hidden="true"
-      xmlns="http://www.w3.org/2000/svg"
-      width="60" height="40" viewBox="0 -16 60 40">
-			<g fill="none" fill-rule="evenodd" transform="translate(0 -16)">
-				<circle cx="12" cy="28" r="12" fill="#FCDE98"/>
-				<circle cx="24" cy="28" r="12" fill="#FCCA98"/>
-				<circle cx="36" cy="28" r="12" fill="#FF9158" opacity=".8"/>
-				<circle cx="48" cy="28" r="12" fill="#FA6A67" opacity=".9"/>
-			</g>
+			aria-hidden="true"
+			xmlns="http://www.w3.org/2000/svg"
+			width="46" height="35" viewBox="0 0 46 35"
+			style="transform: translateY(4px);">
+			<g fill="none" fill-rule="evenodd" transform="translate(0 -5)">
+				<circle cx="12" cy="28" r="12" fill="#5E99FF" opacity=".45"/>
+				<circle cx="29" cy="22" r="17" fill="#5EFFAE" opacity=".7"/></g>
 		</svg>
 
 		<div
-      class="about__options-item-text">поделись своими безумными идеями с&nbsp;нами</div>
+      class="about__options-item-text">Поделись своими безумными идеями с&nbsp;нами</div>
 	</li>
 </ul>
 
