Small fix in text

--- a/lib/src/components/containers/about_container/about_container.html
+++ b/lib/src/components/containers/about_container/about_container.html
@@ -21,7 +21,7 @@
 <p
   class="about__description">
 	Wrike и&nbsp;CodeFest&nbsp;X объединились, чтобы помочь тебе настроить своё расписание. Сейчас ты видишь MVP версию,
-	давай сделаем лучше? Приходи на&nbsp;стенд Wrike - поработай в&nbsp;гараже
+	давай сделаем лучше? Приходи на&nbsp;стенд Wrike — поработай в&nbsp;гараже
 </p>
 
 <ul
