--- a/lib/src/components/containers/lectures_container/actions/actions.html
+++ b/lib/src/components/containers/lectures_container/actions/actions.html
@@ -5,7 +5,7 @@
 
 <button
   cf-button
-  (click)="onStarButtonClick()"
+  (click)="onStarButtonClick($event)"
   class="button-icon-only">
 
   <svg
