add date to lecture card

--- a/lib/src/components/containers/lecture_container/lecture_container.html
+++ b/lib/src/components/containers/lecture_container/lecture_container.html
@@ -184,13 +184,9 @@
               <!-- Title -->
               <div
                 class="info-item__title">
-                {{ startTime }}
-              </div>
-
-              <!-- Subtitle -->
-              <div
-                class="info-item__subtitle">
-                {{ endTime }}
+                {{ startTime }} -   {{ endTime }}
+                <br />
+                <small>{{ date }}</small>
               </div>
             </div>
           </div>
