--- a/lib/src/components/containers/empty_container/empty_container.html
+++ b/lib/src/components/containers/empty_container/empty_container.html
@@ -16,6 +16,7 @@
         cf-button
         (click)="goToLectures()"
         class="button button-primary button-full-width"
+        style="margin-top: 48px;"
       >
         Перейти к расписанию
       </button>
