--- a/lib/src/components/containers/lecture_talk/lecture_talk.html
+++ b/lib/src/components/containers/lecture_talk/lecture_talk.html
@@ -1,3 +1,4 @@
+<talks-zero-state *ngIf="posts.length == 0"></talks-zero-state>
 <talk-post
   *ngFor="let post of posts"
   (onDelete)="onPostDelete($event)"
@@ -7,7 +8,9 @@
 </talk-post>
 
 <talk-post-input
+  *ngIf="canCreatePost  "
   #input
   (onSend)="onSend($event)"
   class="messages__container-input">
 </talk-post-input>
+
