--- a/lib/src/components/sections/sections.html
+++ b/lib/src/components/sections/sections.html
@@ -27,7 +27,7 @@
   </h2>
 
   <toggle
-    [text]="'Показывать все события'"
+    [text]="'Показывать все народные события'"
     [isChecked]="isCustomSectionMode"
     (onChange)="onCustomSectionModeClick()"
     class="toggle-line">
