--- a/lib/src/components/containers/release_notes_container/release_notes_container.html
+++ b/lib/src/components/containers/release_notes_container/release_notes_container.html
@@ -1,8 +1,11 @@
-<template ngFor let-release [ngForOf]="releases">
-  <event-card
+<event-card  *ngFor="let release of releases"
+  [standOut]="true"
+  [startTime]="release.version"
+  [title]="release.title"
+  [description]="release.description"
+  [speakers]="createSpeakers(release)">
+  <event-time
     [startTime]="release.version"
-    [title]="release.title"
-    [description]="release.description"
-    [speaker]="createSpeaker(release)">
-  </event-card>
-</template>
+    side>
+  </event-time>
+</event-card>
