add popularity icon

--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -389,7 +389,7 @@
                       class="event-card__actions">
 
                       <actions
-                        [popularity]="lecture.likesCount"
+                        [popularity]="lecture.favoritesCount"
                         [isFavorite]="isFavoriteLecture(lecture)"
                         (onFavoriteChange)="onFavoriteChange(lecture, $event)">
                       </actions>
