--- a/lib/src/components/ui/popularity_icon/popularity_icon.html
+++ b/lib/src/components/ui/popularity_icon/popularity_icon.html
@@ -1,1 +1,12 @@
-{{ icon }}
+<button
+  cf-button
+  class="button-icon-only">
+
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+    <g fill="none" fill-rule="evenodd">
+      <rect [class.level-2]="level > 0" class="level-1" width="2" height="3" x="6" y="14" rx="1"/>
+      <rect [class.level-2]="level > 1" class="level-1" width="2" height="6" x="11" y="11" rx="1"/>
+      <rect [class.level-2]="level > 2" class="level-1" width="2" height="9" x="16" y="8" rx="1"/>
+    </g>
+  </svg>
+</button>
