--- a/lib/src/components/containers/release_notes_container/release_notes_container.scss
+++ b/lib/src/components/containers/release_notes_container/release_notes_container.scss
@@ -1,6 +1,10 @@
 :host {
   ::ng-deep .event {
     margin-right: -16px;
+
+    article {
+      width: 100%;
+    }
   }
   ::ng-deep .event + .event {
     margin-top: 8px;
