--- a/lib/src/components/containers/map_container/map_container.html
+++ b/lib/src/components/containers/map_container/map_container.html
@@ -5,6 +5,6 @@
   <div
     content>
 
-    <img [src]="'/assets/images/map.jpg'" alt="">
+    <img [src]="'/assets/images/map.jpg'" alt="" class="map">
   </div>
 </layout>
