Fix bug with position sticky

--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -159,6 +159,10 @@
                       {{ endTime(lecture) }}
                     </time>
                   </div>
+
+                  <div
+                    class="time__placeholder">
+                  </div>
                 </div>
               </template>
             </template>
