--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -203,6 +203,11 @@
     top: 0;
   }
 
+  .time__placeholder {
+    @include sticky;
+    bottom: 0;
+  }
+
   .time__item {
     display: block;
   }
