--- a/lib/src/components/containers/lecture_info/lecture_info.html
+++ b/lib/src/components/containers/lecture_info/lecture_info.html
@@ -136,6 +136,7 @@
                 class="event__vote-description">
             Wrike наградит лучшего докладчика
         </p>
+
         <button
                 cf-button
                 [disabled]="!isLectureStarted"
@@ -172,7 +173,7 @@
         <p
                 *ngIf="!isLectureStarted"
                 class="event__vote-disabled-info">
-            Голосование будет доступно через 10 мин после начала доклада для&nbsp;авторизованных пользователей
+            Голосование будет доступно через 10 мин после начала доклада
         </p>
     </section>
 </div>
