--- a/lib/src/components/containers/sections_container/sections_container.html
+++ b/lib/src/components/containers/sections_container/sections_container.html
@@ -1,6 +1,6 @@
 <layout
   *ngIf="isReady"
-  [title]="'Фильтр'"
+  [title]="'Filters'"
   [state]="state"
   navHidden>
 
@@ -49,7 +49,7 @@
         cf-button
         (click)="onApply()"
         class="sections__apply-button button-primary button-full-width">
-        Применить
+        Apply
       </button>
     </div>
   </div>
