--- a/lib/src/components/sections/sections.html
+++ b/lib/src/components/sections/sections.html
@@ -3,7 +3,7 @@
 
   <h2
     class="sections__group-title">
-    Послушать
+    Sections
   </h2>
 
   <div
@@ -18,18 +18,18 @@
   </div>
 </section>
 
-<section
-  class="sections__group">
+<!--<section-->
+  <!--class="sections__group">-->
 
-  <h2
-    class="sections__group-title">
-    Для общения
-  </h2>
+  <!--<h2-->
+    <!--class="sections__group-title">-->
+    <!--Для общения-->
+  <!--</h2>-->
 
-  <toggle
-    [text]="'Показывать все народные события'"
-    [isChecked]="isCustomSectionMode"
-    (onChange)="onCustomSectionModeClick()"
-    class="toggle-line">
-  </toggle>
-</section>
+  <!--<toggle-->
+    <!--[text]="'Показывать все народные события'"-->
+    <!--[isChecked]="isCustomSectionMode"-->
+    <!--(onChange)="onCustomSectionModeClick()"-->
+    <!--class="toggle-line">-->
+  <!--</toggle>-->
+<!--</section>-->
