--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -2,7 +2,7 @@
   [isReady]="isReady">
 
   <layout
-    [title]="'Расписание'"
+    [title]="'Schedule'"
     [isScroll]="true"
     [state]="state"
     [titleHidden]="isSearchMode"
@@ -67,23 +67,23 @@
         (click)="onShowFavoriteClick()"
         [class.button-primary]="isFavoriteSelected"
         class="tags__item button-tag">
-        Избранные
+        Favorites
       </button>
 
-      <button
-        cf-button
-        (click)="onShowCustomClick()"
-        [class.button-primary]="isCustomSelected"
-        class="tags__item button-tag">
-        События
-      </button>
+      <!--<button-->
+        <!--cf-button-->
+        <!--(click)="onShowCustomClick()"-->
+        <!--[class.button-primary]="isCustomSelected"-->
+        <!--class="tags__item button-tag">-->
+        <!--События-->
+      <!--</button>-->
 
       <button
         cf-button
         (click)="onShowNowClick()"
         [class.button-primary]="isNowSelected"
         class="tags__item button-tag">
-        Идет сейчас
+        Live
       </button>
     </nav>
 
@@ -271,6 +271,11 @@
 
                     <div
                       class="event-card__actions">
+
+                      <span
+                        class="event-card__language">
+                        {{ getLang(lecture) }}
+                      </span>
 
                       <actions
                         [popularity]="lecture.favoritesCount"
