--- a/lib/src/components/layout/layout.scss
+++ b/lib/src/components/layout/layout.scss
@@ -21,20 +21,22 @@
 
   .drawer__body {
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .drawer__footer {
     flex-shrink: 0;
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 20px 16px;
     color: $fg-color-secondary;
+  }
 
-    a:link,
-    a:visited {
-      color: $link-color;
-      text-decoration: none;
-    }
+  .drawer__footer-icon {
+    margin-right: 4px;
   }
 
   ::ng-deep {
