--- a/lib/src/components/containers/rating_container/rating_container.scss
+++ b/lib/src/components/containers/rating_container/rating_container.scss
@@ -1,25 +1,28 @@
 @import "../../../../../web/assets/styles/variables.scss";
 
 :host {
-    .like-count {
-        flex-shrink: 0;
-        margin-left: -8px;
-        margin-right: 16px;
-        width: 5ch;
-        padding-top: 16px;
-        color: $fg-color-primary;
-        @include font-title;
+  display: block;
+  height: 100%;
 
-        .icon {
-            color: $fg-color-secondary;
-            vertical-align: top;
-            transform: translate(0, -3px);
-        }
-    }
+  .like-count {
+    flex-shrink: 0;
+    margin-left: -8px;
+    margin-right: 16px;
+    width: 5ch;
+    padding-top: 16px;
+    color: $fg-color-primary;
+    @include font-title;
 
-    .events__list {
-        display: grid;
-        grid-gap: 8px;
-        margin: 12px 0;
-    }
+      .icon {
+        color: $fg-color-secondary;
+        vertical-align: top;
+        transform: translate(0, -3px);
+      }
+  }
+
+  .events__list {
+    display: grid;
+    grid-gap: 8px;
+    margin: 12px 0;
+  }
 }
